--- a/.github/workflows/master_sindhi-recipes.yml
+++ b/.github/workflows/master_sindhi-recipes.yml
@@ -19,12 +19,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
+        registry-url: https://registry.npmjs.org/
 
-    - name: npm install, build, and test
+    - name: yarn install, build, and test
       run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
+        yarn install
+        yarn build --if-present
+        yarn test --if-present
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
