--- a/.github/workflows/master_sindhi-recipes.yml
+++ b/.github/workflows/master_sindhi-recipes.yml
@@ -24,8 +24,8 @@ jobs:
     - name: yarn install, build, and test
       run: |
         yarn install --network-timeout 100000
-        yarn build --if-present
-        yarn test --if-present
+        yarn build
+        yarn test
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
